# Support

./: Dockerfile  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
Support/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tickets/: admin.py  models.py  serializers.py  urls.py  views.py
tickets/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
